Fix main page contact issue
Fixed contact logos being too low on smaller screens

--- a/assests/css/main.css
+++ b/assests/css/main.css
@@ -204,3 +204,10 @@ button:hover {
     border: 5px solid darkred;
     border-radius: 15px;
 }
+
+
+@media (max-width: 500px) {
+    .contactSection {
+        margin-top: -10em;
+    }
+  }
